replace px to rem and some code refactoring

--- a/app/components/header.html
+++ b/app/components/header.html
@@ -2,7 +2,7 @@
   <header class="header">
 <!--  logo  -->
     <div class="header__logo">
-      <img class="logo" src="images/logo-white.png" alt="Natours">
+      <img src="images/logo-white.png" alt="Natours">
     </div>
 <!--  header content  -->
     <div class="header__content">
