--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -2,7 +2,7 @@
 ========================       MEDIA 1366px      ============================
 ===========================================================================*/
 
-@media (max-width: 1366px) {
+@media (max-width: 85.375em) {
   
 }
 
@@ -10,7 +10,7 @@
 ========================       MEDIA 1200px      ============================
 ===========================================================================*/
 
-@media (max-width: 1200px) {
+@media (max-width: 75em) {
   
 }
 
@@ -18,7 +18,7 @@
 ========================       MEDIA 1100px      ============================
 ===========================================================================*/
 
-@media (max-width: 1100px) {
+@media (max-width: 68.75em) {
 
 }
 
@@ -27,7 +27,7 @@
 ========================       MEDIA 1000px      ============================
 ===========================================================================*/
 
-@media (max-width: 1000px) {
+@media (max-width: 62.5em) {
 
 }
 
@@ -35,7 +35,7 @@
 =========================       MEDIA 940px      ============================
 ===========================================================================*/
 
-@media (max-width: 940px) {
+@media (max-width: 58.75em) {
 
 }
 
@@ -43,7 +43,7 @@
 =========================       MEDIA 900px      ============================
 ===========================================================================*/
 
-@media (max-width: 900px) {
+@media (max-width: 56.25em) {
 
 }
 
@@ -51,7 +51,7 @@
 =========================       MEDIA 850px      ============================
 ===========================================================================*/
 
-@media (max-width: 850px) {
+@media (max-width: 53.125em) {
 
 }
 
@@ -59,7 +59,7 @@
 =========================       MEDIA 820px      ============================
 ===========================================================================*/
 
-@media (max-width: 820px) {
+@media (max-width: 51.25em) {
 
 }
 
@@ -67,7 +67,7 @@
 =========================       MEDIA 768px      ============================
 ===========================================================================*/
 
-@media (max-width: 768px) {
+@media (max-width: 48em) {
 
 }
 
@@ -75,7 +75,7 @@
 =========================       MEDIA 640px      ============================
 ===========================================================================*/
 
-@media (max-width: 640px) {
+@media (max-width: 40em) {
 
 }
 
@@ -83,7 +83,7 @@
 =========================       MEDIA 590px      ============================
 ===========================================================================*/
 
-@media (max-width: 590px) {
+@media (max-width: 36.875em) {
 
 }
 
@@ -91,7 +91,7 @@
 =========================       MEDIA 500px      ============================
 ===========================================================================*/
 
-@media (max-width: 500px) {
+@media (max-width: 31.25em) {
 
 }
 
@@ -99,7 +99,7 @@
 =========================       MEDIA 480px      ============================
 ===========================================================================*/
 
-@media (max-width: 480px) {
+@media (max-width: 30em) {
 
 }
 
@@ -107,7 +107,7 @@
 =========================       MEDIA 410px      ============================
 ===========================================================================*/
 
-@media (max-width: 410px) {
+@media (max-width: 25.625em) {
 
 }
 
@@ -115,7 +115,7 @@
 =========================       MEDIA 360px      ============================
 ===========================================================================*/
 
-@media (max-width: 360px) {
+@media (max-width: 22.5em) {
 
 }
 
@@ -123,6 +123,6 @@
 =========================       MEDIA 320px      ============================
 ===========================================================================*/
 
-@media (max-width: 320px) {
+@media (max-width: 20em) {
 
 }
