--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -13,10 +13,10 @@ body {
   background-color: $mainBgColor;
   color: $mainColor;
   font-family: "Lato", sans-serif;
-  font-size: 16px;
+  font-size: 62.5%; // 10px - 10/16
   font-weight: 400;
   line-height: 1.7;
-  padding: 30px;
+  padding: 3rem;
 }
 
 main {
@@ -33,7 +33,7 @@ img {
 }
 
 .container {
-  max-width: 1180px;
-  padding-inline: 20px;
+  max-width: 118rem;
+  padding-inline: 2rem;
   margin: 0 auto;
 }
