--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,6 +1,7 @@
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
+  font-size: 62.5%; // 10px - 10/16
 }
 
 *,
@@ -10,13 +11,13 @@ html {
 }
 
 body {
-  background-color: $mainBgColor;
-  color: $mainColor;
+  background-color: $whiteColor;
+  color: $mainTextColor;
   font-family: "Lato", sans-serif;
-  font-size: 62.5%; // 10px - 10/16
+  font-size: 1.6rem;
   font-weight: 400;
   line-height: 1.7;
-  padding: 3rem;
+  padding: 2rem;
 }
 
 main {
@@ -30,6 +31,12 @@ a {
 
 img {
   display: block;
+}
+
+p {
+  &:not(:last-child) {
+    margin-bottom: 3rem;
+  }
 }
 
 .container {
