--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,6 +1,6 @@
 .header {
   height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba($lightGreen, .8), rgba($darkGreen, .8)), url(../images/hero.jpg);
+  background-image: linear-gradient(to right bottom, rgba($primaryColorLight, .8), rgba($primaryColorDark, .8)), url(../images/hero.jpg);
   background-size: cover;
   background-position: left top;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
