--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,17 +1,31 @@
-$lightGreen: #7ed56f;
-$mediumGreen: #55c57a;
-$darkGreen: #28b485;
+// COLORS
+
+$primaryColorLight: #7ed56f;
+$primaryColorDark: #55c57a;
+$primaryColorDarken: #28b485;
+
+$mainBgColor: #f7f7f7;
+
+$mainTextColor: #777;
 
 $whiteColor: #fff;
 $blackColor: #000;
 
-$mainColor: #777;
+// SHADOWS
+$boxShadowDefault: 0 1rem 2rem rgba($blackColor, .2);
+$boxShadowActive: 0 .5rem 1rem rgba($blackColor, .2);
+$boxShadowLarge: 0 2.5rem 4rem rgba($blackColor, .5);
+$boxShadowMedium: 0 1.5rem 4rem rgba($blackColor, .4);
+
+$textShadowDefault: .5rem 1rem 2rem rgba($blackColor, .2);
 
 
 
 
 
-$mainBgColor: #fff8f3;
+
+
+
 $secondaryBgColor: #a5978e;
 
 $secondaryColor: #333;
