--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,14 +1,14 @@
-@import '_reset';
-@import '_vars';
-@import '_fonts';
-@import '_animations';
-@import '_global';
-@import '_components';
+@import "_reset";
+@import "_icons";
+@import "_vars";
+@import "_fonts";
+@import "_animations";
+@import "_global";
+@import "_components";
+@import "_header";
+@import "_about";
+@import "_features";
 
-@import '_header';
+@import "_footer";
 
-@import '_footer';
-
-
-
-@import '_media';
+@import "_media";
