--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,7 @@
 @import "_reset";
 @import "_icons";
 @import "_vars";
+@import "_mixins";
 @import "_fonts";
 @import "_animations";
 @import "_global";
@@ -8,6 +9,7 @@
 @import "_header";
 @import "_about";
 @import "_features";
+@import "_tours";
 
 @import "_footer";
 
