--- a/app/components/tours.html
+++ b/app/components/tours.html
@@ -1,7 +1,7 @@
-    <!-- SECTION FEATURES -->
-    <section class="features">
+    <!-- SECTION TOURS -->
+    <section class="tours">
       <div class="container">
-        <div class="features__wrapper">
+        <div class="tours__wrapper">
           <!--  Card 1  -->
           <div class="card">
             <div class="card__icon">
