--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -1,6 +1,6 @@
 .about {
   background-color: $mainBgColor;
-  padding: 25rem 0;
+  padding: 25rem 0 30rem;
   margin-top: -20vh;
   text-align: center;
 
