--- a/app/scss/_components.scss
+++ b/app/scss/_components.scss
@@ -91,7 +91,7 @@
 .title--extra-large {
   display: inline-block;
   font-size: 3.5rem;
-  background-image: linear-gradient(to right, $primaryColorLight, $primaryColorDark);
+  background-image: $textGradient;
   background-clip: text;
   color: transparent;
   letter-spacing: .2rem;
@@ -112,3 +112,33 @@
 .title--medium {}
 
 .title--small {}
+
+
+//================ CARD =====================
+
+.card {
+  background-color: rgb($whiteColor, .8);
+  font-size: 1.5rem;
+  padding: 2.5rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: $boxShadowLarge;
+  transition: transform .3s ease-out;
+
+  &:hover {
+    transform: translateY(-1.5rem) scale(1.02);
+  }
+
+  &__title {
+    margin-bottom: 1.5rem;
+  }
+
+  &__icon {
+    font-size: 6rem;
+    display: inline-block;
+    background-image: $textGradient;
+    background-clip: text;
+    color: transparent;
+    margin-bottom: .5rem;
+  }
+}
