section tours, not finished yet

--- a/app/components/tours.html
+++ b/app/components/tours.html
@@ -1,46 +1,31 @@
     <!-- SECTION TOURS -->
     <section class="tours">
       <div class="container">
+        <h2 class="tours__title title title--extra-large">Most popular tours</h2>
         <div class="tours__wrapper">
-          <!--  Card 1  -->
-          <div class="card">
-            <div class="card__icon">
-              <i class="card__icon-item icon-basic-world"></i>
+          <div class="tour-card card--yellow">
+            <div class="tour-card__side">
+              <div class="tour-card__side tour-card__side--front">
+                <div class="tour-card__image"></div>
+                <h4 class="tour-card__image-title"><span>The sea</span><span>explorer</span></h4>
+                <ul class="tour-card__list">
+                  <li class="tour-card__list-item">3 days tour</li>
+                  <li class="tour-card__list-item">Up to 30 people</li>
+                  <li class="tour-card__list-item">2 tour guides</li>
+                  <li class="tour-card__list-item">Sleep in cozy hostels</li>
+                  <li class="tour-card__list-item">Difficulty: very easy</li>
+                </ul>
+              </div>
+              <div class="tour-card__side tour-card__side--back">
+                <div class="tour-card__side-wrapper">
+                  <p class="tour-card__text">only</p>
+                  <div class="tour-card__price">$297</div>
+                  <a href="#" class="button">Book now!</a>
+                </div>
+              </div>
             </div>
-            <h3 class="card__title title--large">Explore the world</h3>
-            <p class="card__text">
-              Ab adipisci aliquam asperiores cumque dignissimos eaque earum.
-            </p>
-          </div>
-          <!--  Card 2  -->
-          <div class="card">
-            <div class="card__icon">
-              <i class="card__icon-item icon-basic-compass"></i>
-            </div>
-            <h3 class="card__title title--large">Meet nature</h3>
-            <p class="card__text">
-              A, amet animi explicabo facilis harum, id, in modi molestias neque nostrum.
-            </p>
-          </div>
-          <!--  Card 3  -->
-          <div class="card">
-            <div class="card__icon">
-              <i class="card__icon-item icon-basic-map"></i>
-            </div>
-            <h3 class="card__title title--large">Find your way</h3>
-            <p class="card__text">
-              Assumenda atque, corporis culpa deserunt dicta doloremque doloribus.
-          </div>
-          <!--  Card 4  -->
-          <div class="card">
-            <div class="card__icon">
-              <i class="card__icon-item icon-basic-heart"></i>
-            </div>
-            <h3 class="card__title title--large">Life a healthier life</h3>
-            <p class="card__text">
-              Debitis ea earum maxime molestias nobis, quaerat quidem quos recusandae sed?
-            </p>
           </div>
         </div>
+        <a href="#" class="button button--green">Discover all tours</a>
       </div>
     </section>
