--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -3,6 +3,10 @@
 $primaryColorLight: #7ed56f;
 $primaryColorDark: #55c57a;
 $primaryColorDarken: #28b485;
+$colorSecondaryLight: #ffb900;
+$colorSecondaryDark: #ff7730;
+$colorTertiaryLight: #2998ff;
+$colorTertiaryDark: #5643fa;
 
 $mainBgColor: #f7f7f7;
 
@@ -10,12 +14,14 @@ $mainTextColor: #777;
 
 $whiteColor: #fff;
 $blackColor: #000;
+$greyColor: #eee;
 
 // SHADOWS
 $boxShadowDefault: 0 1rem 2rem rgba($blackColor, .2);
 $boxShadowActive: 0 .5rem 1rem rgba($blackColor, .2);
 $boxShadowLarge: 0 2.5rem 4rem rgba($blackColor, .5);
 $boxShadowMedium: 0 1.5rem 4rem rgba($blackColor, .4);
+$boxShadowSmall: 0 1.5rem 4rem rgba($blackColor, .15);
 
 $textShadowDefault: .5rem 1rem 2rem rgba($blackColor, .2);
 
