--- a/app/scss/_components.scss
+++ b/app/scss/_components.scss
@@ -329,7 +329,7 @@
 .story {
   width: 75%;
   margin: 0 auto;
-  background-color: $whiteColor;
+  background-color: rgba($whiteColor, .6);
   border-radius: 3px;
   @include shadow(0, 3rem, 6rem, rgba($blackColor, .1));
   padding: 3rem;
@@ -350,9 +350,61 @@
     shape-outside: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
     margin-right: 3rem;
+    position: relative;
 
     img {
       height: 100%;
+      transform: translateX(-4rem) scale(1.4);
+      transition: all .4s ease-in-out;
     }
+
+    &-name {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, 20%);
+      color: $whiteColor;
+      font-size: 1.7rem;
+      text-align: center;
+      text-transform: uppercase;
+      opacity: 0;
+      transition: all .4s ease-in-out;
+      backface-visibility: hidden;
+    }
+  }
+
+  &:hover &__image-name {
+    transform: translate(-50%, -50%);
+    opacity: 1;
+  }
+
+  &:hover &__image img {
+    transform: translateX(-4rem) scale(1);
+    filter: blur(3px) brightness(80%);
+  }
+
+  &:not(:last-child) {
+    margin-bottom: 6rem;
+  }
+}
+
+//===============================================================================
+// =============================== BG-VIDEO =====================================
+//===============================================================================
+
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: .15;
+  overflow: hidden;
+
+  &__content {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
   }
 }
