--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -3,8 +3,23 @@
   <!-- SECTION FOOTER -->
   <footer class="footer" id="footer">
     <div class="container">
-      <div class="footer__wrapper">
-        FOOTER
+      <div class="footer__logo">
+        <img src="./images/logo-green-2x.png" alt="Full logo" class="footer__logo-item">
+      </div>
+      <div class="footer__content">
+        <nav class="footer__nav">
+          <ul class="footer__nav-list">
+            <li class="footer__nav-item"><a href="#" class="footer__nav-link">Company</a></li>
+            <li class="footer__nav-item"><a href="#" class="footer__nav-link">Contact us</a></li>
+            <li class="footer__nav-item"><a href="#" class="footer__nav-link">Carrers</a></li>
+            <li class="footer__nav-item"><a href="#" class="footer__nav-link">Privacy policy</a></li>
+            <li class="footer__nav-item"><a href="#" class="footer__nav-link">Terms</a></li>
+          </ul>
+        </nav>
+        <p class="footer__copy">
+          Create by <a class="footer__copy-link" href="#">Serhii Kleimovych</a>.
+          Design by <a class="footer__copy-link" href="#">Jonas Schmedtmann</a>. 2024
+        </p>
       </div>
     </div>
   </footer>
