--- a/app/scss/_book.scss
+++ b/app/scss/_book.scss
@@ -3,14 +3,10 @@
   @include gradient(to right bottom, $primaryColorLight, $primaryColorDark);
 
   &__wrapper {
-    background-image: url(../images/nat-10.webp);
+    background-image: linear-gradient(105deg, rgba($whiteColor, .9) 0%, rgba($whiteColor, .9) 50%, transparent 50%), url(../images/nat-10.webp);
     background-size: cover;
     background-repeat: no-repeat;
     border-radius: 3px;
     @include shadow(0, 1.5rem, 4rem, rgba($blackColor, .2));
   }
-
-  &__inner {}
-
-  &__title {}
 }
