--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -15,3 +15,6 @@ $mainTextColor: #777;
 $whiteColor: #fff;
 $blackColor: #000;
 $greyColor: #eee;
+
+$placeholderColor: #999;
+$footerBgColor: #333;
